<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363845"
    android:id="@+id/containerLayoutLogin"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_log_out"
            android:layout_marginStart="16dp"
            android:id="@+id/registerButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/bill"
            android:text="@string/register_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/bill"
        android:text="@string/enter_details_text"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/phoneNumberLayout"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.3"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:lines="1"
            android:background="@null"
            android:hint="@string/phone_number_text"
            android:id="@+id/phoneNumberEdit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/passwordLayout"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.4"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"

            android:maxLength="15"
            android:maxLines="1"
            android:lines="1"
            android:background="@null"
            android:hint="@string/parol_text"
            android:id="@+id/passwordEdit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintDimensionRatio="4:1.5"
        android:textColor="#fff"
        android:background="@drawable/bg_button"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="@font/bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/continueButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:fontFamily="@font/bill"
        android:text="@string/reset_password_tex"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:layout_marginTop="8dp"
        android:id="@+id/resetButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@id/passwordLayout"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>