<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layoutPin"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_need_pin_code_text"
        app:layout_constraintTop_toTopOf="@id/toggleButton"
        app:layout_constraintBottom_toBottomOf="@id/toggleButton"
        app:layout_constraintLeft_toRightOf="@id/toggleButton"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textColor="#000"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:id="@+id/pinEdit"
        android:hint="@string/enter_pin_text"/>
    <EditText
        android:layout_width="0dp"
        android:visibility="gone"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:id="@+id/pinConfirm"
        app:layout_constraintVertical_bias="0.6"
        android:hint="@string/confirm_pin_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.1"
        android:text="Davom etish"
        android:textSize="18sp"
        android:fontFamily="@font/bill"
        android:paddingHorizontal="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/continueButton"
        android:background="@drawable/bg_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>