<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363845"
    android:id="@+id/containerLayoutRegister"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/backButton"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_t_text"
            android:textColor="#fff"
            android:textStyle="bold"
            android:fontFamily="@font/bill"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/bill"
        android:text="@string/enter_details_text"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintBottom_toTopOf="@id/userNameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/userNameLayout"
        app:layout_constraintVertical_bias="0.3"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="Ismingiz"
            android:id="@+id/userNameEdit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        app:layout_constraintHeight_percent="0.06"
        android:id="@+id/lastNameLayout"
        app:layout_constraintVertical_bias="0.4"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/lastname_text"
            android:id="@+id/last_name_edit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/passwordLayout"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.5"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/enter_password"
            android:id="@+id/password_edit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/phoneNumberLayout"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.6"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/phone_number_text"
            android:id="@+id/phoneNumberEdit"
            android:textColorHint="#6F6F73"
            android:textColor="#fff"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="8dp"
        android:id="@+id/profileImage"
        android:layout_marginTop="32dp"
        android:src="@drawable/img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/create_image_text"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@id/profileImage"
        app:layout_constraintLeft_toLeftOf="@id/profileImage"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/bill"
        android:text="@string/save_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>