<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#363845"
    android:id="@+id/containerAuth"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_back"
            android:layout_marginStart="16dp"
            android:id="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bill"
            android:text="@string/sms_verify_text"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_sms_code_text"
        app:layout_constraintTop_toBottomOf="@id/layout"
        android:textSize="16sp"
        android:textColor="#fff"
        android:id="@+id/clickPinText"
        android:fontFamily="@font/bill"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toBottomOf="@id/clickPinText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="4dp"
        android:id="@+id/smsInputEditLayout"
        android:gravity="center"
        android:background="@drawable/bg_layout_un">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_margin="8dp"
            android:background="@null"
            android:id="@+id/smsEdit"
            android:gravity="center|start"
            android:textSize="18sp"
            android:textColor="#fff"
            android:maxLength="6"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/textTimer"
            android:paddingStart="8dp"
            android:layout_marginEnd="4dp"
            tools:ignore="RtlSymmetry" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_reload"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/resendButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:id="@+id/textTimer"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/resendButton"
            app:layout_constraintBottom_toBottomOf="@id/resendButton"
            android:textColor="#fff"
            app:layout_constraintRight_toLeftOf="@id/resendButton"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#fff"
        android:layout_marginStart="8dp"
        android:text="@string/sms_text"
        app:layout_constraintTop_toBottomOf="@id/smsInputEditLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@id/smsInputEditLayout" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toTopOf="@id/numTwo"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="@string/_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="12dp"
        android:id="@+id/numOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/numTwo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toBottomOf="@id/smsInputEditLayout"
        app:layout_constraintBottom_toTopOf="@id/numFive"
        app:layout_constraintVertical_bias="0.5"
        android:textColor="#fff"
        android:text="2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/numTwo"
        app:layout_constraintLeft_toRightOf="@id/numOne"
        app:layout_constraintRight_toLeftOf="@id/numThree"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/numTwo"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="3"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/numThree"
        app:layout_constraintLeft_toRightOf="@id/numTwo"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toTopOf="@id/numFive"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="4"

        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numOne"
        app:layout_constraintLeft_toLeftOf="@id/numOne"
        android:textStyle="bold"
        android:id="@+id/numFour"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toBottomOf="@id/numTwo"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="5"
        app:layout_constraintBottom_toTopOf="@id/numEight"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numTwo"
        app:layout_constraintLeft_toLeftOf="@id/numTwo"
        android:textStyle="bold"
        android:id="@+id/numFive"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toTopOf="@id/numFive"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="6"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numThree"
        app:layout_constraintLeft_toLeftOf="@id/numThree"
        android:textStyle="bold"
        android:id="@+id/numSix"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toTopOf="@id/numEight"

        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="7"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numFour"
        app:layout_constraintLeft_toLeftOf="@id/numFour"
        android:textStyle="bold"
        android:id="@+id/numSeven"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toBottomOf="@id/numFive"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="8"
        app:layout_constraintBottom_toTopOf="@id/numZero"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numFive"
        app:layout_constraintLeft_toLeftOf="@id/numFive"
        android:textStyle="bold"
        android:id="@+id/numEight"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toTopOf="@id/numEight"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="9"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numSix"
        app:layout_constraintLeft_toLeftOf="@id/numSix"
        android:textStyle="bold"
        android:id="@+id/numNine"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1.1"
        android:background="@drawable/bg_number_button"
        app:layout_constraintTop_toBottomOf="@id/numEight"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="#fff"
        android:text="0"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@id/numEight"
        app:layout_constraintLeft_toLeftOf="@id/numEight"
        android:textStyle="bold"
        android:id="@+id/numZero"/>


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_backspace_un"
        android:padding="16dp"
        android:backgroundTint="@color/color"
        app:layout_constraintTop_toTopOf="@id/numZero"
        app:layout_constraintBottom_toBottomOf="@id/numZero"
        app:layout_constraintRight_toRightOf="@id/numNine"
        app:layout_constraintLeft_toLeftOf="@id/numNine"
        android:id="@+id/removeButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintDimensionRatio="4:1.5"
        android:textColor="#fff"
        android:background="@drawable/bg_button"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="@font/bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/continue_button"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>